Updated bot to english and Dutch , on all pages

--- a/chatbot/chatbot_en/chatbot.html
+++ b/chatbot/chatbot_en/chatbot.html
@@ -19,7 +19,7 @@ data-cookiesettings="loaded">
 				<header>
 					<img class="wavy" id="wavy" src="img/avatar5.png" alt="TalkTeamBot EN's avatar">
 					<div class="botname">
-						<h2>TalkTeamBot EN</h2>
+						<h2>TalkTeamBot</h2>
 						<span>available</span>
 					</div>
 				</header>
