Update admin login with a password

--- a/chatbot/chatbot_en/chatbot.html
+++ b/chatbot/chatbot_en/chatbot.html
@@ -31,7 +31,7 @@ data-cookiesettings="loaded">
 				</main>
 				<footer>
 					<div class="bottom">
-						<input type="text" id="input" onkeypress="process(event, this)"/>
+						<input type="text" id="input" autocomplete="off" onkeypress="process(event, this)"/>
 						<button class="askbutton" type="button" onclick="loadJSON()">Send</button>
 					</div>
 				</footer>
