Updated chatbot, login script , save/replace img in blog , and aligned cookieWall , corrected menu

--- a/chatbot/chatbot_en/chatbot.html
+++ b/chatbot/chatbot_en/chatbot.html
@@ -6,6 +6,7 @@ data-cookiesettings="loaded">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script type = "application/javascript" src="scripts/smalltalk.js"></script>
 		<script type="text/javascript" src="scripts/jquery.min.js"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/style.css"></link>
 		<link rel="icon" href="img/cropped-baas-icon-32x32.jpg" sizes="32x32">
 		<title>TalkTeamBot EN</title>
@@ -21,6 +22,10 @@ data-cookiesettings="loaded">
 					<div class="botname">
 						<h2>TalkTeamBot</h2>
 						<span>available</span>
+					</div>
+					<div class="min" id="minMax">
+						<i class="fas fa-window-minimize"></i>
+						<i class="fas fa-plus"></i>
 					</div>
 				</header>
 				<main>
