--- a/chatbot/chatbot_nl/chatbot.html
+++ b/chatbot/chatbot_nl/chatbot.html
@@ -19,8 +19,12 @@ data-cookiesettings="loaded">
 				<header>
 					<img class="wavy" id="wavy" src="img/avatar5.png" alt="TalkTeamBot NL's avatar">
 					<div class="botname">
-						<h2>TalkTeamBot NL</h2>
+						<h2>TalkTeamBot</h2>
 						<span>beschikbaar</span>
+					</div>
+					<div class="min" id="minMax">
+						<i class="fas fa-window-minimize"></i>
+						<i class="fas fa-plus"></i>
 					</div>
 				</header>
 				<main>
